<resources>
    <string name="app_name">Werewolf</string>
    <string name="title">Werewolf</string>
    <string name="startbtn">Start</string>
    <string name="rolesbtn">Roles</string>
    <string name="settingbtn">Setting</string>
    <string name="exitbtn">Exit</string>
    <string name="players">Players</string>
    <string name="addplayers">Add Players</string>
    <string name="player">Player</string>
    <string name="confirm">Confirm</string>
    <string name="insertname">Insert Name</string>
    <string name="editplayer">Edit Player</string>
    <string name="pickroles">Pick Roles</string>
    <string name="action_settings">Settings</string>
    <string name="wwrole">Werewolf</string>
    <string name="vgrole">Villager</string>
    <string name="srrole">The Seer</string>
    <string name="knrole">Knight</string>
    <string name="htrole">Hunter</string>
    <string name="sprole">Special Roles</string>
    <string name="rolecounter">0</string>
    <string name="start">Start</string>
    <string name="reveal">reveal</string>
    <string name="guide2">Press the button below\n to reveal your role</string>
    <string name="guide1">Hand the phone\n to this player</string>
    <string name="actionkill">Kill</string>
    <string name="actiondone">Done</string>
    <string name="roleww">Werewolf</string>
    <string name="actionselect">Select</string>
    <string name="rolesr">The Seer</string>
    <string name="actionguard">Guard</string>
    <string name="roleknight">Knight</string>
    <string name="roleht">Hunter</string>
    <string name="rolevg">Villager</string>
    <string name="choose">Choose</string>
    <string name="is_a">is a</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="discuss1">It\'s time to discuss.\n Who is the werewolf?</string>
    <string name="vote">Vote</string>
    <string name="roles">Roles</string>
    <string name="finish">finish</string>

</resources>
