<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainmenubg"
    tools:context=".activities.gameStart">

    <ImageView
        android:id="@+id/iv_bgboard"
        android:layout_width="350dp"
        android:layout_height="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bgboard" />

    <ImageView
        android:id="@+id/player_imgadd1"
        android:layout_width="185dp"
        android:layout_height="240dp"
        android:background="@drawable/mainmenubtn"

        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        app:cardCornerRadius="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tvplayername"
        app:layout_constraintEnd_toEndOf="@+id/iv_bgboard"
        app:layout_constraintStart_toStartOf="@+id/iv_bgboard"
        app:layout_constraintTop_toTopOf="@+id/iv_bgboard">

        <ImageView
            android:id="@+id/player_imgprompt"
            android:layout_width="175dp"
            android:layout_height="230dp"
            android:contentDescription="@string/player"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvplayername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player"
        android:textColor="@android:color/white"
        android:fontFamily="@font/russo_one"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_bgboard"
        app:layout_constraintEnd_toEndOf="@+id/iv_bgboard"
        app:layout_constraintStart_toStartOf="@+id/iv_bgboard"
        app:layout_constraintTop_toTopOf="@+id/iv_bgboard" />

    <TextView
        android:id="@+id/tvguide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/russo_one"
        android:gravity="center"
        android:text="@string/guide1"
        android:textColor="@android:color/white"

        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_bgboard"
        app:layout_constraintEnd_toEndOf="@+id/iv_bgboard"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/iv_bgboard"
        app:layout_constraintTop_toTopOf="@+id/iv_bgboard"
        app:layout_constraintVertical_bias="0.59" />

    <TextView
        android:id="@+id/tvguide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/russo_one"
        android:gravity="center"
        android:text="@string/guide2"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_bgboard"
        app:layout_constraintEnd_toEndOf="@+id/iv_bgboard"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/iv_bgboard"
        app:layout_constraintTop_toTopOf="@+id/iv_bgboard"
        app:layout_constraintVertical_bias="0.788" />

    <Button
        android:id="@+id/btn_reveal"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/btndarkmode"
        android:fontFamily="@font/russo_one"
        android:text="@string/reveal"

        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_bgboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvguide" />

</androidx.constraintlayout.widget.ConstraintLayout>