<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.selectRoles">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/rolesToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fontFamily="@font/russo_one"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        app:title="@string/pickroles"
        app:titleTextColor="#FFFFFF" />

    <ImageView
        android:id="@+id/iv_ww"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rolesToolbar"
        app:srcCompat="@drawable/mainmenubtn" />

    <ImageView
        android:id="@+id/iv_vg"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toEndOf="@+id/iv_ww"
        app:layout_constraintTop_toBottomOf="@+id/rolesToolbar"
        app:srcCompat="@drawable/mainmenubtn" />

    <Button
        android:id="@+id/btn_plusvg"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="428dp"
        android:background="@drawable/selectrolesbtn"
        android:fontFamily="@font/russo_one"
        android:gravity="center"
        android:text="+"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_plusww"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="132dp"
        android:layout_marginBottom="428dp"
        android:background="@drawable/selectrolesbtn"
        android:fontFamily="@font/russo_one"
        android:gravity="center"
        android:text="+"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_minww"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="428dp"
        android:background="@drawable/selectrolesbtn"
        android:fontFamily="@font/russo_one"
        android:gravity="center"
        android:text="-"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_minvg"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="428dp"
        android:background="@drawable/selectrolesbtn"
        android:fontFamily="@font/russo_one"
        android:gravity="center"
        android:text="-"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/vgcounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/russo_one"
        android:text="@string/rolecounter"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vgrole" />

    <TextView
        android:id="@+id/wwcounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/russo_one"
        android:text="@string/rolecounter"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wwrole" />

    <TextView
        android:id="@+id/kncounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/russo_one"
        android:text="@string/rolecounter"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/knrole" />

    <TextView
        android:id="@+id/srcounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/russo_one"
        android:text="@string/rolecounter"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/srrole" />

    <TextView
        android:id="@+id/htcounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/russo_one"
        android:text="@string/rolecounter"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/htrole" />

    <TextView
        android:id="@+id/wwrole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/russo_one"
        android:text="@string/wwrole"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_ww" />

    <TextView
        android:id="@+id/htrole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/russo_one"
        android:text="@string/htrole"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_hunter" />

    <TextView
        android:id="@+id/knrole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/russo_one"
        android:text="@string/knrole"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_knight" />

    <TextView
        android:id="@+id/srrole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/russo_one"
        android:text="@string/srrole"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_seer" />

    <TextView
        android:id="@+id/vgrole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/russo_one"
        android:text="@string/vgrole"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_vg" />

    <TextView
        android:id="@+id/sprole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/russo_one"
        android:text="@string/sprole"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rolesToolbar"
        app:layout_constraintVertical_bias="0.423" />

    <ImageView
        android:id="@+id/iv_seer"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="244dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/mainmenubtn" />

    <ImageView
        android:id="@+id/iv_knight"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="244dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_hunter"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toEndOf="@+id/iv_seer"
        app:srcCompat="@drawable/mainmenubtn" />

    <ImageView
        android:id="@+id/iv_hunter"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="244dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/mainmenubtn" />

    <Button
        android:id="@+id/btn_plushunter"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="356dp"
        android:layout_marginBottom="184dp"
        android:background="@drawable/selectrolesbtn"
        android:fontFamily="@font/russo_one"
        android:gravity="center"
        android:text="+"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_minseer"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="184dp"
        android:background="@drawable/selectrolesbtn"
        android:fontFamily="@font/russo_one"
        android:gravity="center"
        android:text="-"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_plusknight"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="228dp"
        android:layout_marginBottom="184dp"
        android:background="@drawable/selectrolesbtn"
        android:fontFamily="@font/russo_one"
        android:gravity="center"
        android:text="+"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_plusseer"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="184dp"
        android:background="@drawable/selectrolesbtn"
        android:fontFamily="@font/russo_one"
        android:gravity="center"
        android:text="+"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_minknight"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="184dp"
        android:background="@drawable/selectrolesbtn"
        android:fontFamily="@font/russo_one"
        android:gravity="center"
        android:text="-"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_minhunter"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="288dp"
        android:layout_marginBottom="184dp"
        android:background="@drawable/selectrolesbtn"
        android:fontFamily="@font/russo_one"
        android:gravity="center"
        android:text="-"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_confirm_roles"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/mainmenubtn"
        android:fontFamily="@font/russo_one"
        android:text="@string/confirm"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>